--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- owl css -->
+    <link rel="stylesheet" href="css/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl/owl.theme.default.min.css">
     <title>AnimeFlix</title>
 </head>
 <body>
@@ -35,13 +41,43 @@
             </div>
             <div>
                 <button role="button" class="botao">
+                    <i class="fa-solid fa-play"></i>
                     ASSISTIR AGORA
-                </button role="button" class="botao">
-                <button>
+                </button>
+                <button  role="button" class="botao">
+                    <i class="fa-solid fa-circle-info"></i>
                     MAIS INFORMAÇÕES
                 </button>
             </div>
         </div>
     </main>
+
+    <div class="carrosel-animes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-anime" src="imgs/Chunniobyo.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/DBZ.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/Kimetsu.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/KON.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/MyheroAcademia.jpg" alt="Chunniobyo">
+            </div>
+        </div>
+    </div>
+
+   
+    <!-- jquery -->
+    <script src="js/owl/jquery.min.js"></script>
+    <!-- owl js -->
+    <script src="js/owl/owl.carousel.min.js"></script>
+     <!-- scrip padrão -->
+     <script src="js/owl/setup.js"></script>
 </body>
 </html>
