--- a/Index.html
+++ b/Index.html
@@ -53,6 +53,7 @@
     </main>
 
     <div class="carrosel-animes">
+        <p class="Destaque">EM DESTAQUE</p>
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <img class="box-anime" src="imgs/Chunniobyo.jpg" alt="Chunniobyo">
@@ -71,6 +72,52 @@
             </div>
         </div>
     </div>
+
+    <div class="carrosel-animes">
+        <p class="Destaque">LAMÇAMENTOS</p>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-anime" src="imgs/Akebi.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/MyDressUp.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/NAgatoro.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/takagiSan.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/HigeWoSoru.jpg" alt="Chunniobyo">
+            </div>
+        </div>
+    </div>
+
+    <div class="carrosel-animes">
+        <p class="Destaque">SUGESTÕES</p>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-anime" src="imgs/Naruto.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/NoGameNoLife.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/OnePiece.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/OnePuch.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/Overlord.jpg" alt="Chunniobyo">
+            </div>
+            <div class="item">
+                <img class="box-anime" src="imgs/SAO.jpg" alt="Chunniobyo">
+            </div>
+        </div>
+    </div>
+    
 
    
     <!-- jquery -->
